--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node r2_uploader.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
@@ -15,7 +16,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
-    "react-router-dom": "^7.5.1"
+    "react-router-dom": "^7.5.1",
+    "@aws-sdk/client-s3": "^3.620.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "multer": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
